# cocos2dxAndroidTemplate

./: .gitignore  gradle.properties  settings.gradle
app/: AndroidManifest.xml  build.gradle
app/jni/: AppDelegate.cpp  CMakeLists.txt  HelloWorldScene.cpp
app/res/values/: strings.xml
libcocos2dx/: build.gradle
